[package]
name = "tennis_lib"
version = "0.1.0"
authors = ["lescuer97 <leoescuer@protonmail.com>"]
edition = "2021"

[lib]
name = "tennis_lib"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen = { version = "0.2.83", features = ["serde", "serde_json"] }
