[package]
name = "wasm_tennis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.145"
serde-wasm-bindgen = "0.4.5"
tennis_lib = { version = "0.1.0", path = "../rust-lib" }
wasm-bindgen = { version = "0.2.83", features = ["serde", "serde_json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
